--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <body>
      <title>Beanie Boy</title>
         <a href=https://open.spotify.com/artist/13r3HUJjWQJELmQqN8F9d7>
-          <object data="cdeeznuts.gif">
-          </object>
+          <img src="cdeeznuts.gif"></img>
         </a>
         <audio id="audio" autoplay="false">
           <source src="./joyce.mp3" type="audio/mpeg" />
