--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
      <title>Beanie Boy</title>
         <a href=https://open.spotify.com/artist/13r3HUJjWQJELmQqN8F9d7>
-          <object data="cdeeznuts.gif"></img>
+          <object data="cdeeznuts.gif"></object>
         </a>
         <audio id="audio" autoplay="false">
           <source src="./joyce.mp3" type="audio/mpeg" />
