--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           </object>
         </a>
         <audio id="audio" autoplay="false">
-          <source src="./oblivious.mp3" type="audio/mpeg" />
-          <source src="./oblivious.ogg" type="audio/ogg" />
+          <source src="./COASTTOCOASTv2.mp3" type="audio/mpeg" />
+          <source src="./COASTTOCOASTv2.ogg" type="audio/ogg" />
         </audio>
         <a onclick="playSound();"><p>beanie boy enterprises inc.</p></a>
         <script src="audio.js"></script>
