--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <source src="./COASTTOCOASTv2.mp3" type="audio/mpeg" />
           <source src="./COASTTOCOASTv2.ogg" type="audio/ogg" />
         </audio>
-        <a onclick="playSound();"><p>beanie boy enterprises inc.</p></a>
+        <a href=https://youtu.be/ekJosLic8RA><p>beanie boy enterprises inc.</p></a>
         <script src="audio.js"></script>
     </body>
 </html>
