--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
           <object data="cdeeznuts.gif">
           </object>
         </a>
-        <audio id="audio" autoplay="false">
-          <source src="./COASTTOCOASTv2.mp3" type="audio/mpeg" />
-          <source src="./COASTTOCOASTv2.ogg" type="audio/ogg" />
-        </audio>
-        <a href=https://youtu.be/ekJosLic8RA><p>beanie boy enterprises inc.</p></a>
-        <script src="audio.js"></script>
+        <a href=https://youtu.be/ekJosLic8RA>
+          <p>beanie boy enterprises inc.</p>
+        </a>
     </body>
 </html>
