--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <object data="cdeeznuts.gif">
           </object>
         </a>
-        <a href=http://url2734.distrokid.com/ls/click?upn=gIy05sl-2BkeX0Wcl7-2B1nYOTQWWeGlFhShnhnCU8f1UBCko3eoyL3xMqwU3wmf7uF0R8RshsViiuYVM80fYh-2FhLy0FT0e6qN4i9vCYmzBBDfB-2B-2F3g7TSBGeg52QWtf90SvTgQQUzHiQ-2Fekl1Lb5VnF4kOckl6PjW7BlbBXEQ7F3-2BI-3DEF2d_MNFgMHziiKkSNj1S-2BjKu77mobwd-2FcUKblrBHa-2B0YWJhOP-2B1Iy5n-2FeIE8OhN1X1PA7Lk1skGLbgZpTKC4cYvLYMmVeO2SNleM0R7bzuW4SVrs4OdY-2BBtJEmXoRgyM5ekh-2BNRT0PeOZqM2bPwrbA1iRimRQ0uhVZDlJqz3rZg3HqA881xCG32NlyrgaGb7fe1lNp-2FFADRiBY0Or3srwNHOxKzWsIhSFBRHyppk-2B-2Fv8-2F5A-3D>
+        <a href=https://distrokid.com/hyperfollow/beanieboy31/encore>
           <p>beanie boy enterprises inc.</p>
         </a>
     </body>
