--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
     <body>
      <title>Beanie Boy</title>
-        <a href=https://open.spotify.com/artist/13r3HUJjWQJELmQqN8F9d7>
+        <a href=linktr.ee/somesortoficon>
           <object data="cdeeznuts.gif">
           </object>
         </a>
