--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
     <body>
-     <title>Beanie Boy</title>
+     <title>beanie boy</title>
         <a href=linktr.ee/somesortoficon>
           <object data="cdeeznuts.gif">
           </object>
