--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
     <body>
      <title>beanie boy</title>
-        <a href=linktr.ee/somesortoficon>
+        <a href=https://linktr.ee/somesortoficon>
           <object data="cdeeznuts.gif">
           </object>
         </a>
