--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </head>
     <body>
      <title>beanie boy</title>
-        <a href=https://linktr.ee/somesortoficon>
+        <a href="https://linktr.ee/somesortoficon">
           <object data="cdeeznuts.gif">
           </object>
         </a>
-        <a href=https://distrokid.com/hyperfollow/beanieboy31/encore>
+        <a href="https://distrokid.com/hyperfollow/beanieboy31/encore">
           <p>beanie boy enterprises inc.</p>
         </a>
     </body>
