--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         <a href="https://distrokid.com/hyperfollow/beanieboy31/encore">
           <p>beanie boy enterprises inc.</p>
         </a>
+        <a href="SUBSITE/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html">
+          MIDNIGHTSOUNDS
+        </a>
     </body>
 </html>
