--- a/SUBSITE/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/SUBSITE/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -2,7 +2,9 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="beanie.png">
-    <link href="DS-DIGII.TTF" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital@1&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="MSEgLs3NhATTZztCczueOKYl9eSzkG8pmu5j3y-rmKU" />
     <style>
@@ -17,12 +19,22 @@
           <object data="midnightvinylspin.gif">
           </object>
         </a>
-         <p id="MIDNIGHTSOUNDS">
-            AFTERPARTY is a long look back at my journey as a person, artist and my childhood in California.
-            This song stands as a love letter to my fans, my family and my friends, both old and new. This
-            song stands as a grateful after party for my first two decades of life. Following this comes a
-            much more somber hidden track titled "SIGNOFF". Originally to be a ballad for a lost lover now
-            turned my sign off into my next decade, with a hint of mystery of what's to come next.
-          </p id="MIDNIGHTSOUNDS">
+         <p id="MIDNIGHT">
+            MIDNIGHTSOUNDS is a seven months in the making passion project for myself. Since before July, I
+            started listening to more lofi and abstract artists such as MIKE, The Koreatown Oddity and JIMMY,
+            inspiring me to take a more laid-back approach to songs and take on a more retro sound. The deep
+            voice you hear throughout the album announcing the station is noneother than Big B, the radio host
+            of 115.5 MDNT FM. In my childhood years, I would often take drives with my family to drop off my
+            little brother and on the way back we would pass through noneother than Malibu. I was absolutely
+            mesmirised by the shimmering waves and golden sunset. I could smell the ozone just by looking at
+            it. All the while, my parents had the radio cranked up listening to the oldies but goodies broadcast
+            by noneother than Art Laboe. He was a radio host known for having folks come onto his show and
+            dedicate songs to folks around the area. Most of the people that were on air would usually dedicate
+            the song to an incarcerated loved one or even someone halfway across the country. I thought it
+            was outstanding that a decades old technology could still connect folks to this day. Going into
+            MIDNIGHTSOUNDS, I wanted to capture that energy, that love, that connectivity, all of it. After
+            numerous name changes, edits and the like, I am more than happy to share this journey with you all,
+            be it fans, family, and friends.
+          </p>
     </body>
 </html>
