--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <body>
      <title>beanie boy</title>
         <a href="https://linktr.ee/somesortoficon">
-          <object data="cdeeznuts.gif">
+          <object id="CD" data="cdeeznuts.gif">
           </object>
         </a>
         <a href="https://distrokid.com/hyperfollow/beanieboy31/encore">
           <p>beanie boy enterprises inc.</p>
         </a>
         <a href="SUBSITE/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html">
-          MIDNIGHTSOUNDS
+          <object id="MIDNIGHT" data="MIDNIGHTSOUNDSlogo.png">
+          </object>
         </a>
     </body>
 </html>
