--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -14,7 +14,9 @@
     </style>
   </head>
     <body>
-     <title>beanie boy</title>
+     <title>MIDNIGHTSOUNDS</title>
+     <audio src="AFTERPARTYinst.mp3" loop autoplay>
+    </audio>
         <a href="https://beanie-boy.com">
           <object data="midnightvinylspin.gif">
           </object>
