--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -15,12 +15,15 @@
   </head>
     <body>
      <title>MIDNIGHTSOUNDS</title>
-     <audio src="AFTERPARTYinst.mp3" loop autoplay>
-    </audio>
         <a href="https://beanie-boy.com">
           <object data="midnightvinylspin.gif">
           </object>
         </a>
+        <audio id="audio" autoplay="false">
+          <source src="./oblivious.mp3" type="audio/mpeg" />
+          <source src="./oblivious.ogg" type="audio/ogg" />
+        </audio>
+        <a onclick="playSound();"><object datat="playpause.png"</a>
          <p id="MIDNIGHT">
             MIDNIGHTSOUNDS is a seven months in the making passion project for myself. Since before July, I
             started listening to more lofi and abstract artists such as MIKE, The Koreatown Oddity and JIMMY,
