--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="beanie.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" viewport-fit="cover">
     <meta name="google-site-verification" content="MSEgLs3NhATTZztCczueOKYl9eSzkG8pmu5j3y-rmKU"/>
     <style>
       body {
