--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -2,16 +2,11 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="beanie.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="MSEgLs3NhATTZztCczueOKYl9eSzkG8pmu5j3y-rmKU"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital@1&display=swap" rel="stylesheet">
-    <style>
-      body {
-        background-image: url("MSback.png");
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   </head>
     <body>
      <title>MIDNIGHTSOUNDS</title>
