--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital@1&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0; shrink-to-fit=no; viewport-fit=cover">
   </head>
     <body>
      <title>MIDNIGHTSOUNDS</title>
