--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
           <object id="CD" data="cdeeznuts.gif">
           </object>
         </a>
-        <a href="https://distrokid.com/hyperfollow/beanieboy31/sketchbook">
+        <a href="https://distrokid.com/hyperfollow/beanieboy31/futurev1sion">
           <p>beanie boy enterprises inc.</p>
         </a>
         <a href="sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html">
           <object id="MIDNIGHT" data="MIDNIGHTSOUNDSlogo.png">
+          </object>
+        </a>
+        <a href="sub/FUTUREV1SION/FUTUREV1SION.html">
+          <object id="FV1Z" data="FUTUREV1SIONlogo.png">
           </object>
         </a>
     </body>
