--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -17,21 +17,25 @@
           </object>
         </a>
          <p id="MIDNIGHT">
-            MIDNIGHTSOUNDS is a seven months in the making passion project for myself. Since before July, I
-            started listening to more lofi and abstract artists such as MIKE, The Koreatown Oddity and JIMMY,
-            inspiring me to take a more laid-back approach to songs and take on a more retro sound. The deep
-            voice you hear throughout the album announcing the station is noneother than Big B, the radio host
-            of 115.5 MDNT FM. In my childhood years, I would often take drives with my family to drop off my
-            little brother and on the way back we would pass through noneother than Malibu. I was absolutely
-            mesmirised by the shimmering waves and golden sunset. I could smell the ozone just by looking at
-            it. All the while, my parents had the radio cranked up listening to the oldies but goodies broadcast
-            by noneother than Art Laboe. He was a radio host known for having folks come onto his show and
-            dedicate songs to folks around the area. Most of the people that were on air would usually dedicate
-            the song to an incarcerated loved one or even someone halfway across the country. I thought it
-            was outstanding that a decades old technology could still connect folks to this day. Going into
-            MIDNIGHTSOUNDS, I wanted to capture that energy, that love, that connectivity, all of it. After
-            numerous name changes, edits and the like, I am more than happy to share this journey with you all,
-            be it fans, family, and friends.
+			MIDNIGHTSOUNDS is a seven months in the making passion project for myself. Since 
+			before July, I started listening to more lo-fi and abstract artists such as MIKE, 
+			The Koreatown Oddity and JIMMY, inspiring me to take a more laid-back approach 
+			to songs and take on a more retro sound. <br><br>
+			The deep voice you hear throughout the 
+			album announcing the station is none other than Big B, the radio host of 115.5 
+			MDNT FM. In my childhood years, I would often take drives with my family to drop 
+			off my little brother and on the way back we would pass through none other 
+			than Malibu. I was absolutely mesmerized by the shimmering waves and golden 
+			sunset. I could smell the ozone just by looking at it. All the while, my parents 
+			had the radio cranked up listening to the oldies but goodies broadcast by none 
+			other than Art Laboe. He was a radio host known for having folks come onto his 
+			show and dedicate songs to folks around the area. Most of the people that were 
+			on air would usually dedicate the song to an incarcerated loved one or even 
+			someone halfway across the country.<br><br> I thought it was outstanding that a decades 
+			old technology could still connect folks to this day. Going into MIDNIGHTSOUNDS, 
+			I wanted to capture that energy, that love, that connectivity, all of it. After 
+			numerous name changes, edits and the like, I am more than happy to share this 
+			journey with you all, be it fans, family, and friends.
           </p>
     </body>
 </html>
