--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -35,7 +35,7 @@
 			old technology could still connect folks to this day. Going into MIDNIGHTSOUNDS, 
 			I wanted to capture that energy, that love, that connectivity, all of it. After 
 			numerous name changes, edits and the like, I am more than happy to share this 
-			journey with you all, be it fans, family, and friends.
+			journey with you all, be it fan, family, or friend.
           </p>
     </body>
 </html>
