--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="beanie.png">
@@ -16,8 +17,12 @@
           <object id="CD" data="cdeeznuts.gif">
           </object>
         </a>
-        <a href="https://distrokid.com/hyperfollow/beanieboy31/futurev1sion">
+        <a href="https://distrokid.com/hyperfollow/beanieboy31/beanie-boy-presents-moonlight">
           <p>beanie boy enterprises inc.</p>
+        </a>
+        <a href="sub/THEBEANIETRILOGY/THEBEANIETRILOGY.html">
+          <object id="BEANIE" data="TBT-logo.png">
+          </object>
         </a>
         <a href="sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html">
           <object id="MIDNIGHT" data="MIDNIGHTSOUNDSlogo.png">
