--- a/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
+++ b/sub/MIDNIGHTSOUNDS/MIDNIGHTSOUNDS.html
@@ -20,7 +20,7 @@
          <p id="MIDNIGHT">
 			MIDNIGHTSOUNDS is a seven months in the making passion project for myself. Since 
 			before July, I started listening to more lo-fi and abstract artists such as MIKE, 
-			The Koreatown Oddity and JIMMY, inspiring me to take a more laid-back approach 
+			The Koreatown Oddity and Seafood Sam, inspiring me to take a more laid-back approach 
 			to songs and take on a more retro sound. <br><br>
 			The deep voice you hear throughout the 
 			album announcing the station is none other than Big B, the radio host of 115.5 
